--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,7 +48,7 @@ uuid = { version = "1", optional = true }
 saturating = "0.1"
 serde = "1"
 serde_json = "1"
-
+zstd = "0.12.4"
 [dev-dependencies]
 proptest = "1.0"
 
